# libmaestro

./: CMakeLists.txt  LICENSE.txt  README.md
cmake_modules/: Findlibusb-1.0.cmake
include/: protocol.h
src/: maestro-app.cpp  maestro.cpp
